--- a/QURAANEY/App.config
+++ b/QURAANEY/App.config
@@ -1,17 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="QURAANEY.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
     </configSections>
     <connectionStrings>
-		<!--//الشغل كومبيوتري-->
-           <!--<add name="QURAANEY.Properties.Settings.MY_QURAANConnectionString1"
+        <add name="QURAANEY.Properties.Settings.MY_QURAANConnectionString"
+            connectionString="Data Source=ISRAA-PC;Initial Catalog=MY_QURAAN;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+        <add name="QURAANEY.Properties.Settings.MY_QURAANConnectionString1"
             connectionString="Data Source=ISRAA-PC\SQLEXPRESS;Initial Catalog=MY_QURAAN;Integrated Security=True"
-            providerName="System.Data.SqlClient" />-->
-		
-		<!--لابتوبي-->
-        <add name="QURAANEY.Properties.Settings.MY_QURAANConnectionString" connectionString="Data Source=.;Initial Catalog=MY_QURAAN;Integrated Security=True" providerName="System.Data.SqlClient"/>
+            providerName="System.Data.SqlClient" />
+        <add name="QURAANEY.Properties.Settings.MY_QURAANConnectionString2"
+            connectionString="Data Source=.;Initial Catalog=MY_QURAAN;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
     </startup>
+    <userSettings>
+        <QURAANEY.Properties.Settings>
+            <setting name="conn_string" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="server_name" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="db_name" serializeAs="String">
+                <value />
+            </setting>
+        </QURAANEY.Properties.Settings>
+    </userSettings>
 </configuration>
