--- a/QURAANEY/Properties/Settings.settings
+++ b/QURAANEY/Properties/Settings.settings
@@ -26,5 +26,14 @@
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">Data Source=.;Initial Catalog=MY_QURAAN;Integrated Security=True</Value>
     </Setting>
+    <Setting Name="conn_string" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="server_name" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="db_name" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
