--- a/QURAANEY/QURAANEY.csproj
+++ b/QURAANEY/QURAANEY.csproj
@@ -64,6 +64,9 @@
   <PropertyGroup>
     <SignManifests>true</SignManifests>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>56315_book_islam_islamic_kuran_mosque_icon.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Accessibility" />
     <Reference Include="DevExpress.Charts.v20.1.Core, Version=20.1.6.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a" />
@@ -130,6 +133,8 @@
       <DependentUpon>AboutBox1.cs</DependentUpon>
     </Compile>
     <Compile Include="CLASS_TABLES\C_DEFULTES_sql.cs" />
+    <Compile Include="CLASS_TABLES\C_EVALUATION.cs" />
+    <Compile Include="CLASS_TABLES\C_KEEP_TYPE.cs" />
     <Compile Include="CLASS_TABLES\C_PERSON_sql.cs" />
     <Compile Include="CLASS_TABLES\C_PERS_RATE_KEEP_sql.cs" />
     <Compile Include="CLASS_TABLES\C_PERS_TYPE_sql.cs" />
@@ -143,6 +148,12 @@
     </Compile>
     <Compile Include="F_DASHBOARD.Designer.cs">
       <DependentUpon>F_DASHBOARD.cs</DependentUpon>
+    </Compile>
+    <Compile Include="SOURA\F_Rep_Soura2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SOURA\F_Rep_Soura2.Designer.cs">
+      <DependentUpon>F_Rep_Soura2.cs</DependentUpon>
     </Compile>
     <Compile Include="TEAST\C_TEST.cs" />
     <Compile Include="DB\DB.designer.cs">
@@ -326,6 +337,9 @@
     <EmbeddedResource Include="F_DASHBOARD.resx">
       <DependentUpon>F_DASHBOARD.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="SOURA\F_Rep_Soura2.resx">
+      <DependentUpon>F_Rep_Soura2.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="START\F_LOGIN.resx">
       <DependentUpon>F_LOGIN.cs</DependentUpon>
     </EmbeddedResource>
@@ -461,6 +475,9 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="56315_book_islam_islamic_kuran_mosque_icon.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
